--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <body>
     <div class="cointainer">
       <h1 id="breve">Em breve ❤️</h1>
-      <h2><a id="hm" href="https://twitter.com/bluuu3s">Twitter</a></h2>
-      <h2><a href="https://github.com/bluu3s">Github</a></h2>
+      <h2><a id="hm" href="#">Twitter</a></h2>
+      <h2><a href="#">Github</a></h2>
     </div>
   </body>
 </html>
